# script-generator

./: .env.example  README.md  pyproject.toml  requirements.txt
output/: 20260220_214300_rookie_qbs_are_changing_the_nfl_game!.json  20260220_214300_rookie_qbs_are_changing_the_nfl_game!.txt  20260220_214905_nba_hype_vs._nfl_drama:_what's_grabbing_headlines?.json  20260220_214905_nba_hype_vs._nfl_drama:_what's_grabbing_headlines?.txt
src/: __main__.py  config.py  graph.py  main.py
src/models/: __init__.py  narratives.py  script.py  state.py  tweets.py
src/nodes/: __init__.py  credibility_filter.py  engagement_scoring.py  fetch_tweets.py  narrative_extraction.py  quality_check.py  script_generation.py  script_outline.py  sentiment_clustering.py
src/prompts/: __init__.py  script.py  sentiment.py
src/scoring/: __init__.py  credibility.py  engagement.py
src/utils/: __init__.py  logging.py  nfl.py  output.py
tests/: test_credibility.py  test_engagement.py  test_models.py  test_utils.py
